[package]
name = "kcl-loader"
version = "0.1.0"
edition = "2021"
author = "Romeo Disca <romeo.disca@gmail.com>"
repository = "https://github.com/i-think-rapido/kcl-loader-rs"
description = "Kusion Configuration Language - schema and file loader and deserializer"
publish = true
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features=["derive"] }
serde_yaml = "0.9.17"

kclvm-ast       = { path = "../kclvm/kclvm/ast" }
kclvm-parser    = { path = "../kclvm/kclvm/parser" }
kclvm-runner    = { path = "../kclvm/kclvm/runner" }

[build-dependencies]
kclvm-ast       = { path = "../kclvm/kclvm/ast" }
kclvm-parser    = { path = "../kclvm/kclvm/parser" }

